kubedump-gcs-repo-cluster-resourckup-frequent-backup-1746451368/manifest/kubestash-tmp/manifest/mutatingwebhookconfigurations.admissionregistration.k8s.io/cluster/kubestash-kubestash-operator.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    helm.sh/hook: pre-install,pre-upgrade
    helm.sh/hook-delete-policy: before-hook-creation
  labels:
    app.kubernetes.io/instance: kubestash
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubestash-operator
    app.kubernetes.io/version: v0.17.0
    helm.sh/chart: kubestash-operator-v0.17.0
  name: kubestash-kubestash-operator
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQmhFcElqZlRJTnV5cC9vam1PYnc4VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE0yTVRkYUZ3MHpOVEEwTWpBd05UTTJNVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFzMjNoCmdIOXVTbHBOcXV5RVdqd2FQcTZUOVYyd0QvTUNRc1ZYcWFwZEdsMGttMTNYb1IwK3FxdlovMlVsQ3doQ25XUXAKdXczRjJnSWo4MFBVT1QwQVB1TU5udjhNd2RkR2lLMWx4UXNzNkxzeGJxSE5BblZxNHBMRXVVRmtyb1FQNXgwSAordzBZRmRBOEZlcH [...]
    service:
      name: kubestash-kubestash-operator-webhook
      namespace: stash
      path: /mutate-storage-kubestash-com-v1alpha1-backupstorage
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mbackupstorage.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - storage.kubestash.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backupstorages
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQmhFcElqZlRJTnV5cC9vam1PYnc4VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE0yTVRkYUZ3MHpOVEEwTWpBd05UTTJNVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFzMjNoCmdIOXVTbHBOcXV5RVdqd2FQcTZUOVYyd0QvTUNRc1ZYcWFwZEdsMGttMTNYb1IwK3FxdlovMlVsQ3doQ25XUXAKdXczRjJnSWo4MFBVT1QwQVB1TU5udjhNd2RkR2lLMWx4UXNzNkxzeGJxSE5BblZxNHBMRXVVRmtyb1FQNXgwSAordzBZRmRBOEZlcH [...]
    service:
      name: kubestash-kubestash-operator-webhook
      namespace: stash
      path: /mutate-storage-kubestash-com-v1alpha1-retentionpolicy
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mretentionpolicy.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - storage.kubestash.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - retentionpolicies
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQmhFcElqZlRJTnV5cC9vam1PYnc4VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE0yTVRkYUZ3MHpOVEEwTWpBd05UTTJNVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFzMjNoCmdIOXVTbHBOcXV5RVdqd2FQcTZUOVYyd0QvTUNRc1ZYcWFwZEdsMGttMTNYb1IwK3FxdlovMlVsQ3doQ25XUXAKdXczRjJnSWo4MFBVT1QwQVB1TU5udjhNd2RkR2lLMWx4UXNzNkxzeGJxSE5BblZxNHBMRXVVRmtyb1FQNXgwSAordzBZRmRBOEZlcH [...]
    service:
      name: kubestash-kubestash-operator-webhook
      namespace: stash
      path: /mutate-core-kubestash-com-v1alpha1-backupblueprint
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mbackupblueprint.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - core.kubestash.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backupblueprints
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQmhFcElqZlRJTnV5cC9vam1PYnc4VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE0yTVRkYUZ3MHpOVEEwTWpBd05UTTJNVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFzMjNoCmdIOXVTbHBOcXV5RVdqd2FQcTZUOVYyd0QvTUNRc1ZYcWFwZEdsMGttMTNYb1IwK3FxdlovMlVsQ3doQ25XUXAKdXczRjJnSWo4MFBVT1QwQVB1TU5udjhNd2RkR2lLMWx4UXNzNkxzeGJxSE5BblZxNHBMRXVVRmtyb1FQNXgwSAordzBZRmRBOEZlcH [...]
    service:
      name: kubestash-kubestash-operator-webhook
      namespace: stash
      path: /mutate-core-kubestash-com-v1alpha1-backupconfiguration
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mbackupconfiguration.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - core.kubestash.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - backupconfigurations
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQmhFcElqZlRJTnV5cC9vam1PYnc4VEFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE0yTVRkYUZ3MHpOVEEwTWpBd05UTTJNVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUFzMjNoCmdIOXVTbHBOcXV5RVdqd2FQcTZUOVYyd0QvTUNRc1ZYcWFwZEdsMGttMTNYb1IwK3FxdlovMlVsQ3doQ25XUXAKdXczRjJnSWo4MFBVT1QwQVB1TU5udjhNd2RkR2lLMWx4UXNzNkxzeGJxSE5BblZxNHBMRXVVRmtyb1FQNXgwSAordzBZRmRBOEZlcH [...]
    service:
      name: kubestash-kubestash-operator-webhook
      namespace: stash
      path: /mutate-core-kubestash-com-v1alpha1-hooktemplate
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mhooktemplate.kb.io
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - core.kubestash.com
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - hooktemplates
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
