kubedump-gcs-repo-cluster-resourckup-frequent-backup-1746451368/manifest/kubestash-tmp/manifest/mutatingwebhookconfigurations.admissionregistration.k8s.io/cluster/mutators.elasticsearch.kubedb.com.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: kubedb
    meta.helm.sh/release-namespace: kubedb
  labels:
    app.kubernetes.io/component: kubedb-dashboard
    app.kubernetes.io/instance: kubedb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/version: v0.29.1
    helm.sh/chart: kubedb-webhook-server-v0.29.0
  name: mutators.elasticsearch.kubedb.com
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-elasticsearch-kubedb-com-v1alpha1-elasticsearchdashboard
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: elasticsearchdashboardwebhook.mutators.elasticsearch.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - elasticsearch.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - elasticsearchdashboards
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
