kubedump-gcs-repo-cluster-resourckup-frequent-backup-1746451368/manifest/kubestash-tmp/manifest/mutatingwebhookconfigurations.admissionregistration.k8s.io/cluster/mutators.kubedb.com.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  annotations:
    meta.helm.sh/release-name: kubedb
    meta.helm.sh/release-namespace: kubedb
  labels:
    app.kubernetes.io/component: kubedb-provisioner
    app.kubernetes.io/instance: kubedb
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: kubedb-webhook-server
    app.kubernetes.io/version: v0.29.1
    helm.sh/chart: kubedb-webhook-server-v0.29.0
  name: mutators.kubedb.com
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kubedb-com-v1-elasticsearch
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: elasticsearchwebhook.mutators.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kubedb.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - elasticsearches
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kubedb-com-v1-kafka
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: kafkawebhook.mutators.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kubedb.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - kafkas
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kafka-kubedb-com-v1alpha1-connectcluster
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: connectclusterwebhook.mutators.kafka.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kafka.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - connectclusters
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kafka-kubedb-com-v1alpha1-connector
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: connectorwebhook.mutators.kafka.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kafka.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - connectors
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kafka-kubedb-com-v1alpha1-restproxy
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: restproxywebhook.mutators.kafka.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kafka.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - restproxies
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kafka-kubedb-com-v1alpha1-schemaregistry
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: schemaregistrywebhook.mutators.kafka.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kafka.kubedb.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - schemaregistries
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kubedb-com-v1-mariadb
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mariadbwebhook.mutators.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kubedb.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - mariadbs
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kubedb-com-v1-mongodb
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mongodbwebhook.mutators.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kubedb.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - mongodbs
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kubedb-com-v1-mysql
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: mysqlwebhook.mutators.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kubedb.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - mysqls
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kubedb-com-v1-postgres
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: postgreswebhook.mutators.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kubedb.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - postgreses
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kubedb-com-v1-redis
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: rediswebhook.mutators.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kubedb.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - redises
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCVENDQWUyZ0F3SUJBZ0lRQzhRQzJOYkI3VjNhUm1jVHdpV0crakFOQmdrcWhraUc5dzBCQVFzRkFEQU4KTVFzd0NRWURWUVFERXdKallUQWVGdzB5TlRBME1qSXdOVE00TlRkYUZ3MHpOVEEwTWpBd05UTTROVGRhTUEweApDekFKQmdOVkJBTVRBbU5oTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUF6eEVCCkVmS05yYzJSZGQxSVhXeDNaeXdUVzJIeXNXcElhMWt6OEJVMDBYbGh3Z2JuS05UNUpPQThXOU5vR1dpQ2tWZngKLzVVSmZYc0NtMmlPT01tRFc3MXl6Yy9RaXE4aUtaSkFCS2FLTENBVFhoaGR5NU9MSG9qeUhZZXVZdXpjZTVvNApaa01JL2RuWnNFaG [...]
    service:
      name: kubedb-kubedb-webhook-server
      namespace: kubedb
      path: /mutate-kubedb-com-v1-redissentinel
      port: 443
  failurePolicy: Ignore
  matchPolicy: Equivalent
  name: redissentinelwebhook.mutators.kubedb.com
  namespaceSelector: {}
  objectSelector: {}
  reinvocationPolicy: Never
  rules:
  - apiGroups:
    - kubedb.com
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - redissentinels
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
